--- a/SenseBox.Project/res/layout/graph_layout.xml
+++ b/SenseBox.Project/res/layout/graph_layout.xml
@@ -7,26 +7,12 @@
     android:layout_height="match_parent"
     >
     <!-- The main content view -->
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <!-- The navigation drawer -->
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#111"/>
-
 
 <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:orientation="vertical"
@@ -51,4 +37,23 @@
 
 </ScrollView>
 
+    <!-- The navigation drawer -->
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" >
+     </ListView>
+     
+
+
+
+
 </android.support.v4.widget.DrawerLayout>
+
+
