--- a/SenseBox.Project/res/menu/main.xml
+++ b/SenseBox.Project/res/menu/main.xml
@@ -8,4 +8,13 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     
+        <item
+        android:id="@+id/refresh"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:visible="true"
+        />
+    
 </menu>
