--- a/SenseBox.Project/res/layout/min_max_activity.xml
+++ b/SenseBox.Project/res/layout/min_max_activity.xml
@@ -14,26 +14,17 @@
     android:id="@+id/scrollView"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@color/black" >
+    android:background="@color/white" >
 
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium" 
-        android:textSize="25sp"
-        android:gravity="center|top"
-        android:textColor="@color/white"
-        />
+	<Spinner
+	    android:id="@+id/spinner"
+	    android:prompt="@+id/spinner_header"
+	    android:layout_width="fill_parent"
+	    android:layout_height="50dip" />
 
     <TextView
         android:id="@+id/textView3"
@@ -44,7 +35,7 @@
         android:layout_marginTop="36dp"
         android:text="Pressure: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView4"
@@ -55,7 +46,7 @@
         android:layout_marginTop="36dp"
         android:text="Gust: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView5"
@@ -66,7 +57,7 @@
         android:layout_marginTop="36dp"
         android:text="Direction: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView6"
@@ -77,7 +68,7 @@
         android:layout_marginTop="36dp"
         android:text="Rain: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView7"
@@ -88,7 +79,7 @@
         android:layout_marginTop="36dp"
         android:text="Speed: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView1"
@@ -97,10 +88,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView8"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="70dp"
         android:text="Humidity: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView2"
@@ -111,7 +102,7 @@
         android:layout_marginTop="36dp"
         android:text="Temperature: "
         android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
 </RelativeLayout>
 
@@ -127,10 +118,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" >
+        android:dividerHeight="0dp"
+        
+        android:background="@android:color/background_light">
      </ListView>
      
 
