--- a/SenseBox.Project/res/layout/results_activity.xml
+++ b/SenseBox.Project/res/layout/results_activity.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     >
     <!-- The main content view -->
+        <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <Spinner
+	    android:id="@+id/spinner"
+	    android:prompt="@+id/spinner_header"
+	    android:layout_width="fill_parent"
+	    android:layout_height="50dip" />
+
 
 <HorizontalScrollView
     android:id="@+id/horizontalScroll"
@@ -13,11 +23,14 @@
     android:layout_height="wrap_content" 
     android:fillViewport="true">
 
+
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fillViewport="true" >
+
+
 
         <TableLayout
             android:id="@+id/maintable"
@@ -28,7 +41,7 @@
     </ScrollView>
 
 </HorizontalScrollView>
-  
+          </LinearLayout>
 <!-- The navigation drawer -->
 
     <ListView
@@ -36,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
+        android:background="@android:color/background_light">
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" >
